fixed issue-2044: Tags drop-down menu is getting overlapped by another elements. (#2265)

--- a/openmetadata-ui/src/main/resources/ui/src/styles/tailwind.css
+++ b/openmetadata-ui/src/main/resources/ui/src/styles/tailwind.css
@@ -57,7 +57,7 @@
     @apply tw-border;
   }
   .tw-table-responsive {
-    @apply tw-block tw-w-full tw-overflow-x-auto;
+    @apply tw-block tw-w-full;
   }
   .tw-table-responsive > .tw-table-bordered {
     @apply tw-border-none;
